2006-02-28  Derek Price  <derek@ximbiot.com>

	* root.c: Interpret specs that look like @server:/hostname as :ext:.
	* sanity.sh (parseroot2): Add a test for this.

2006-02-27  Derek Price  <derek@ximbiot.com>

	* rcs.c (rcsbuf_cache_open): Back out potentially dangerous change
	from 2006-01-30.

	* sanity.sh (binwrap3): Remove unnecessary change dir command.

	* lock.c (internal_lock): Improve error message.

	* root.c [HOSTNAME_CHARS]: Rename to...
	[FQDN_CHARS]: ...this and remove underscore from list.
	(parse_cvsroot): FQDNs cannot start with `.'.

2006-02-26  Derek Price  <derek@ximbiot.com>

	* root.c [HOSTNAME_CHARS]: New macro.
	(parse_cvsroot): Interpret specs that look like relative paths as
	relative paths, not hostname/path.
	* sanity.sh (crerepos-6a, parseroot2): Update to compensate.

	* client.c (call_in_directory): Remove unneeded code.

2006-02-25  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (crerepos-6a): Simplify expected output expression.

	* edit.c (edit_fileproc): Do not assert (!check_edited) in
	--disable-client configurations.

	* sanity.sh (config-5): The number of lines in the config file
	vary with --disable-proxy configurations. Use [0-9][0-9]* to match
	the line number instead of an explicit line 98 in this test.
	(multiroot2-9a): Deal with Write_Template messages that will not
	occur in --disable-server configurations.

2006-02-24  Mark D. Baushke  <mdb@gnu.org>

	* client.c (gzip_level): Move to...
	* main.c (gzip_level): ...here.
	(main): Revert previous change in '-z' argument processing and
	remove CLIENT_SUPPORT ifdef/endif.
	* sanity.h (crerepos-6a): Deal with --disable-client output.

	* main.c (main): Validate the gzip compression level for
	--disable-client configurations.

2006-02-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio-6): Rewrite using more portable sed script.

2006-02-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio): Attempt to ignore spurious SSH output.
